# pvdiffusiontoconductivitytensor

./: CMakeLists.txt  README.md  plugin.cmake  pqDiffusionToConductivityTensorPanel.cxx  pqDiffusionToConductivityTensorPanel.h  vtkDiffusionToConductivityTensorFilter.cxx  vtkDiffusionToConductivityTensorFilter.h  vtkDiffusionToConductivityTensorFilter_SM.xml
